# lana-bank

./: .envrc  Makefile  docker-compose.dagster-postgres.yml  flake.nix
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
.sqlx/: query-3354f433aa149cf095b0a2e486d5adba5b6086fbda9858d5791b24e8c6159c71.json  query-4269461e76583c1ee2eebfb574e18dc78490bce44638d3144d4b1c737cfe8059.json  query-4770d1337ae00dfdb7f80418684375be856f5bfd85c5f1659db051828d07d75d.json  query-510fe64940b7320178d7187f08f63a6a999c91ea1e0c374616a68bb24c699d9a.json  query-8f6491c3babf0b46d5a0258df742e653944275f8e41ae76de09dae44913d4956.json  query-9cc1d801819f2c599a8a1dea594073714dfb0d63963fab982b7ef0106ebb8c8b.json  query-9f6fc819f5ab45aa005ee6d6a3523255a3760289ab50f49b00236a344a9bd7dc.json  query-e6c171f07fb6f59b904ee88e41973411f247ec537bdfd840c84122c264bc2c12.json
apps/admin-panel/app/audit/: list.tsx
apps/admin-panel/app/liquidations/: list.tsx  page.tsx  (+1 more)
bats/: dagster-lana-assets.bats  dagster-list-assets.bats  dagster.bats  lana.devcontainer.yml
bats/accounting-init/: credit-module-config.json
bats/dagster-gql/: stop_sensor.gql
core/access/: Cargo.toml
core/access/src/: bootstrap.rs
core/access/src/user/: mod.rs
core/access/tests/: helpers.rs  role.rs  user.rs
core/accounting/src/: primitives.rs
core/credit/src/: error.rs  event.rs  lib.rs  publisher.rs
core/credit/tests/: chart_of_accounts_integration.rs
core/custody/src/: lib.rs
core/customer/src/: lib.rs
core/deposit/src/: primitives.rs
core/governance/src/: lib.rs
dagster/src/: definitions.py  sensors.py
dagster/src/assets/: dbt.py  lana.py
lana/app/migrations/: 20240517074612_core_setup.sql  20260130015237_create_core_liquidation_events_rollup.sql
lana/dashboard/src/: values.rs
lana/rbac-types/src/: lib.rs
lib/audit/: Cargo.toml
lib/audit/src/: lib.rs  svc_trait.rs
lib/authz/src/: dummy.rs
workspace-hack/: Cargo.toml
(+86 files in other folders)
