[package]
name = "core-access"
license = "BUSL-1.1"
edition = "2024"

[features]

default = ["governance"]
fail-on-warnings = []
graphql = ["es-entity/graphql", "governance/graphql"]
governance = ["dep:governance"]
json-schema = [
    "dep:schemars",
    "es-entity/json-schema",
    "audit/json-schema",
    "governance/json-schema",
]

[dependencies]
governance = { workspace = true, optional = true }

audit = { workspace = true }
authz = { workspace = true }
obix = { workspace = true }

es-entity = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
schemars = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
async-trait = { workspace = true }
obix = { workspace = true, features = ["test-utils"] }
rand = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
