[package]
name = "audit"

license = "BUSL-1.1"
edition = "2024"

[features]

fail-on-warnings = []
json-schema = ["dep:schemars", "es-entity/json-schema"]

[dependencies]
es-entity = { workspace = true }

sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-macros = { workspace = true }
tracing-utils = { workspace = true }
schemars = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
